<resources>
    <string name="app_name">Docsavior</string>
    <string name="send_new_password">Send new password</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create new account</string>
    <string name="logo_here">Logo here</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="close" />
    <string name="todo">TODO</string>
    <string name="last_seen_11_44am">Last seen 11:44AM</string>
    <string name="write_a_message">Write a message</string>
    <string name="this_is_a_message">This is a message</string>
    <string name="docsavior">Docsavior</string>
    <string name="type_to_look_up">Type to look up</string>
    <string name="create_a_post">Create a post</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="place_to_find_nsaviors_for_nyour_studies">Place to find \nsaviors for \nyour studies</string>
    <string name="nickname">Nickname</string>
    <string name="delete_message">Delete message</string>
    <string name="block_user">Block user</string>
    <string name="notification">Notification</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="user_information">User information</string>
    <string name="account_name">Account name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="finish">Finish</string>
    <string name="account_name_note">Fill in some information for us to know who you are</string>
    <string name="sign_up_note">* This name will show on your profile</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="friend">Friend</string>
    <string name="conversation">Conversation</string>
    <string name="setting">Setting</string>
    <string name="choose_your_date_of_birth">Choose your date of birth</string>
    <string name="there_is_nothing_to_show">There is nothing to show</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="one_time_password_sent">One Time Password (OTP)\nhas been sent to your Email</string>
    <string name="reset_password_in">Resent OTP in</string>
    <string name="verify">Verify</string>
    <string name="password_confirm">Confirm your password</string>
    <string name="send_request">Send request</string>
    <string name="add_friend">Add friend</string>
    <string name="message">Message</string>
    <string name="all">All</string>
    <string name="picture">Picture</string>
    <string name="video">Video</string>
    <string name="file">File</string>
    <string name="personal_information">Personal information</string>
    <string name="topic">Topic</string>
    <string name="description">description</string>
    <string name="document_url">Document name</string>
    <string name="gi_i_t_nh">Giới tính</string>
    <string name="ng_y_sinh">Ngày sinh</string>
    <string name="i_n_tho_i">Điện thoại</string>
    <string name="_20_th_ng_09_2004">20 tháng 09, 2004</string>
    <string name="nam">Nam</string>
    <string name="_20_th_ng_1_n_m_1999">20 tháng 1 năm 1999</string>
    <string name="_20_01_1999">20/01/1999</string>
    <string name="_84_913_597_256">+84 913 597 256</string>
    <string name="phone">Phone</string>
    <string name="the_name">The name</string>
    <string name="_22521648_gm_uit_edu_vn">22521648@gm.uit.edu.vn</string>
    <string name="status">Status</string>
    <string name="offline">Offline</string>
    <string name="edit_profile">Edit profile</string>
    <string name="full_name">Your full name</string>
    <string name="_12_12_2012_12_12_12">12/12/2012 12:12:12</string>
    <string name="hyphen">" - "</string>
    <string name="notification1">Notification</string>
    <string name="decline">Decline</string>
    <string name="ok_fine">OK, fine</string>
    <string name="online">Online</string>
    <string name="friend_list"> Friend list</string>
    <string name="look_up_history">Look up history</string>
    <string name="picture_video">Picture/Video</string>
    <string name="post_detail">Post detail</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="recover_your_password">Recover your password</string>

</resources>