<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_blue">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:text="@string/logo_here"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/user_information"
        android:layout_below="@id/logo"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitleNote"
        android:layout_below="@+id/title"
        android:text="@string/account_name_note"
        android:layout_marginLeft="20dp"
        android:textSize="13sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line"
        android:layout_margin="5dp"
        android:background="@color/grey"
        android:layout_below="@+id/tvTitleNote" />
    <EditText
        android:id="@+id/edAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/full_name"
        android:inputType="text"
        android:padding="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAccountNameNote"
        android:layout_below="@+id/edAccountName"
        android:text="@string/sign_up_note"
        android:layout_marginLeft="25dp"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:layout_marginTop="20dp"
        android:id="@+id/tvDateOfBirth"
        android:textSize="20sp"
        android:layout_below="@id/tvAccountNameNote"
        android:layout_marginLeft="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvDateOfBirth"
        android:id="@+id/edDateOfBirth"
        android:background="@drawable/edittext"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/choose_your_date_of_birth"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvGender"
        android:text="@string/gender"
        android:layout_below="@+id/edDateOfBirth"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:id="@+id/cbMale"
        android:layout_below="@+id/tvGender"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:id="@+id/cbFemale"
        android:layout_below="@+id/tvGender"
        android:layout_toRightOf="@id/cbMale"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnContinue"
        android:layout_below="@+id/cbMale"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/finish"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/blue"/>
</RelativeLayout>