<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_blue">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:text="@string/logo_here"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/recover_your_password"
        android:layout_below="@id/logo"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/username"
        android:padding="15dp"
        android:inputType="text"
        android:autofillHints="string" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edEmail"
        android:layout_below="@id/edUsername"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edPhoneNumber"
        android:layout_below="@id/edEmail"
        android:background="@drawable/edittext"
        android:hint="@string/phone_number"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:inputType="phone"
        android:autofillHints="phone"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRecoverPassword"
        android:layout_below="@+id/edPhoneNumber"
        android:layout_centerHorizontal="true"
        android:text="@string/send_new_password"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue"/>
</RelativeLayout>