<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_blue">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/logo"
        android:importantForAccessibility="no"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/create_new_account"
        android:layout_below="@id/logo"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp"
        android:autofillHints="username" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edEmail"
        android:layout_below="@id/edUsername"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edPassword"
        android:layout_below="@id/edEmail"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:autofillHints="password" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edPasswordConfirm"
        android:layout_below="@id/edPassword"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:padding="15dp"
        android:autofillHints="password" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edPhoneNumber"
        android:layout_below="@id/edPasswordConfirm"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="15dp"
        android:autofillHints="phone" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:layout_below="@+id/edPhoneNumber"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/blue"/>
</RelativeLayout>
