<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:id="@+id/rltTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvPersonalInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/personal_information"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/circlebtn"
                android:backgroundTint="@color/blue"
                android:contentDescription="@string/todo"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/turn_back" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rltUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rltTop"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@id/tvUsername"
                android:background="@drawable/edittext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="5dp"
                android:text="@string/the_name"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rtlFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rltUsername"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvFullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/fullname"
                android:textColor="@color/black"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/etFullname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="34dp"
                android:layout_toEndOf="@id/tvFullname"
                android:background="@drawable/edittext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="5dp"
                android:text="@string/the_name"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rltEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rtlFullname"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="66dp"
                android:layout_toEndOf="@id/tvEmail"
                android:background="@drawable/edittext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:text="@string/_22521648_gm_uit_edu_vn"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rltStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rltEmail"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/etStatus"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="60dp"
                android:layout_toEndOf="@id/tvStatus"
                android:background="@drawable/edittext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="5dp"
                android:text="@string/offline"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rltGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rltStatus"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="56dp"
                android:layout_toEndOf="@id/tvGender"
                android:background="@drawable/edittext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="5dp"
                android:text="@string/nam"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rltBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rltGender"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etBirthday"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tvBirthday"
                android:background="@drawable/edittext"
                android:importantForAutofill="no"
                android:inputType="date"
                android:padding="5dp"
                android:text="@string/_20_01_1999"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rltPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rltBirthday"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="65dp"
                android:layout_toEndOf="@id/tvPhone"
                android:background="@drawable/edittext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="5dp"
                android:text="@string/phone_number"
                android:textSize="20sp"
                tools:ignore="LabelFor" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rltEditProfile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rltPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edittext"
            android:backgroundTint="@color/blue"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imgEditProfileIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:importantForAccessibility="no"
                android:src="@drawable/edit_profile" />

            <TextView
                android:id="@+id/tvEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/imgEditProfileIcon"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>