<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_message_white_blue_corner"
    android:layout_marginTop="5dp"
    android:id="@+id/rltUsernameConversation">




    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnFriendProfile"
        android:layout_marginStart="3dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/user_icon_black"
        android:background="@drawable/circlebtn"
        android:backgroundTint="@color/white"
        android:scaleType="centerCrop"
        android:padding="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFriendUsername"
        android:text="@string/username"
        android:layout_toEndOf="@+id/btnFriendProfile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLastSeen"
        android:layout_below="@+id/tvFriendUsername"
        android:text="@string/last_seen_11_44am"
        android:layout_toEndOf="@+id/btnFriendProfile"
        android:textSize="15sp"
        android:layout_marginStart="10dp"/>


</RelativeLayout>
